--- a/umap/static/umap/locale/br.json
+++ b/umap/static/umap/locale/br.json
@@ -558,17 +558,23 @@
     "Text rotate": "C'hwelañ an destenn",
     "Text size": "Ment an destenn",
     "Load map template": "Kargañ patrom ar gartenn",
-    "Use a template to initialize your map": "Implijit ur patrom evit deraouiñ ho kartenn",
     "My templates": "Ma fatromoù",
     "From staff": "Erbedet",
     "From community": "Eus ar gumuniezh",
-    "Include template data, if any": "Lakaat titouroù ar patrom e-barzh, ma'z eus anezho",
-    "Load this template": "Kargañ ar patrom-mañ",
-    "Open": "Digor",
     "You must select a template.": "Dav eo deoc'h diuzañ ur patrom.",
     "Line decoration": "Line decoration",
     "Reuse this template": "Adimplij ar patrom-mañ",
     "Create a new map using this template": "Krouiñ ur gartenn nevez en ur implij ar patrom-mañ",
     "Save template": "Enrollañ ar patrom",
-    "Load template": "Kargañ ar patrom"
+    "Load template": "Kargañ ar patrom",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first."
 }
