--- a/umap/static/umap/locale/da.json
+++ b/umap/static/umap/locale/da.json
@@ -48,10 +48,10 @@
     "Change tilelayers": "Skift fliselag",
     "Change": "Ændr",
     "Choose the data format": "Vælg dataformat",
-    "Choropleth breakpoints": "Koropletbrudpunkter",
-    "Choropleth classes": "Koropletklasser",
-    "Choropleth color palette": "Koropletfarvepalette",
-    "Choropleth mode": "Koroplettilstand",
+    "Choropleth breakpoints": "Koroplet-brudpunkter",
+    "Choropleth classes": "Koroplet-klasser",
+    "Choropleth color palette": "Koroplet-farvepalette",
+    "Choropleth mode": "Koroplet-tilstand",
     "Choropleth property value": "Koroplet-egenskabsværdi",
     "Choropleth": "Koroplet",
     "Circle": "Cirkel",
@@ -558,17 +558,23 @@
     "Text rotate": "Tekst-rotation",
     "Text size": "Tekststørrelse",
     "Load map template": "Indlæs kortskabelon",
-    "Use a template to initialize your map": "Brug en skabelon til at begynde dit kort",
     "My templates": "Mine skabeloner",
     "From staff": "Fra medarbejdere",
     "From community": "Fra fællesskabet",
-    "Include template data, if any": "Inkluder skabelondata, hvis der er nogen",
-    "Load this template": "Indlæs denne skabelon",
-    "Open": "Åbn",
     "You must select a template.": "Du skal vælge en skabelon.",
     "Line decoration": "Linjeudsmykning",
     "Reuse this template": "Genbrug denne skabelon",
     "Create a new map using this template": "Opret et nyt kort ved hjælp af denne skabelon",
     "Save template": "Gem skabelon",
-    "Load template": "Indlæs skabelon"
+    "Load template": "Indlæs skabelon",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first."
 }
