--- a/umap/static/umap/locale/de.json
+++ b/umap/static/umap/locale/de.json
@@ -530,18 +530,51 @@
     "Home logo": "Home logo",
     "Add this geometry to my map": "Add this geometry to my map",
     "Add this place to my map": "Add this place to my map",
-    "Cancel last edit": "Cancel last edit",
-    "Redo last edit": "Redo last edit",
+    "Cancel last edit": "Letzte Bearbeitung abbrechen",
+    "Redo last edit": "Letzte Bearbeitung wiederholen",
     "Links": "Links",
-    "Images": "Images",
+    "Images": "Bilder",
     "Iframes": "Iframes",
     "Tags": "Tags",
     "Geocode": "Geocode",
     "Display the back to home icon": "Display the back to home icon",
     "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
     "Simplify all geometries to points": "Simplify all geometries to points",
-    "Back to list": "Back to list",
-    "Toggle rule": "Toggle rule",
-    "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Back to list": "Zurück zur Liste",
+    "Toggle rule": "Regel umschalten",
+    "Delete rule": "Regel löschen",
+    "Cannot save layer, please try again in a few minutes.": "Ebene konnte nicht gespeichert werden. Bitte versuche es in ein paar Minuten erneut.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Textfarbe",
+    "Text offset": "Text offset",
+    "Text position": "Textposition",
+    "start": "Start",
+    "center": "Mitte",
+    "end": "Ende",
+    "Text repeat": "Textwiederholung",
+    "Text rotate": "Textdrehung",
+    "Text size": "Textgröße",
+    "Load map template": "Lade Kartenvorlage",
+    "My templates": "Meine Vorlagen",
+    "From staff": "Von Mitarbeitern",
+    "From community": "Von der Community",
+    "You must select a template.": "Du musst eine Vorlage auswählen.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Erstelle eine neue Karte aus dieser Vorlage.",
+    "Save template": "Vorlage speichern",
+    "Load template": "Vorlage laden",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first."
 }
