--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -558,17 +558,23 @@
     "Text rotate": "Rotar texto",
     "Text size": "Tamaño del texto",
     "Load map template": "Cargar plantilla de mapa",
-    "Use a template to initialize your map": "Usar una plantilla para iniciar tu mapa",
     "My templates": "Mis plantillas",
     "From staff": "Del staff",
     "From community": "De la comunidad",
-    "Include template data, if any": "Incluir datos de la plantilla, si los hay",
-    "Load this template": "Cargar esta plantilla",
-    "Open": "Abrir",
     "You must select a template.": "Debes seleccionar una plantilla.",
     "Line decoration": "Decoración de línea",
     "Reuse this template": "Reutilizar esta plantilla",
     "Create a new map using this template": "Crear un nuevo mapa usando esta plantilla",
     "Save template": "Guardar plantilla",
-    "Load template": "Cargar plantilla"
+    "Load template": "Cargar plantilla",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first."
 }
