--- a/umap/static/umap/locale/nl.json
+++ b/umap/static/umap/locale/nl.json
@@ -558,17 +558,23 @@
     "Text rotate": "Tekst draaien",
     "Text size": "Tekst grootte",
     "Load map template": "Laad een sjabloonkaart",
-    "Use a template to initialize your map": "Gebruik een sjabloon om de kaart op te zetten",
     "My templates": "Mijn sjablonen",
     "From staff": "Van de beheerders",
     "From community": "Van de community",
-    "Include template data, if any": "Voeg ook data van het sjabloon toe, indien beschikbaar",
-    "Load this template": "Dit sjabloon laden",
-    "Open": "Openen",
     "You must select a template.": "Je moet een sjabloon kiezen",
     "Line decoration": "Lijn tekenstijl",
     "Reuse this template": "Hergebruik dit sjabloon",
     "Create a new map using this template": "Maak een nieuwe kaart met dit sjabloon",
     "Save template": "Sla sjabloon op",
-    "Load template": "Laad sjabloon"
+    "Load template": "Laad sjabloon",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first."
 }
