--- a/umap/static/umap/locale/es.json
+++ b/umap/static/umap/locale/es.json
@@ -567,14 +567,14 @@
     "Create a new map using this template": "Crear un nuevo mapa usando esta plantilla",
     "Save template": "Guardar plantilla",
     "Load template": "Cargar plantilla",
-    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
-    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
-    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
-    "There is no public template yet.": "There is no public template yet.",
-    "Explore": "Explore",
-    "Import data from public open data portals": "Import data from public open data portals",
-    "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first."
+    "Loading a template will apply predefined styles and settings to your map": "Cargar una plantilla aplicará estilos y configuraciones predefinidas a tu mapa",
+    "Load template with data": "Cargar plantilla con datos",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "Aún no tienes ninguna plantilla registrada. Puedes agregar una creando un nuevo mapa y marcándolo como \"plantilla\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "Aún no hay una plantilla recomendada. Las plantillas recomendadas son las destacadas por los administradores de uMap.",
+    "There is no public template yet.": "Aún no hay plantillas públicas.",
+    "Explore": "Explorar",
+    "Import data from public open data portals": "Importar datos desde portales públicos de datos abiertos",
+    "Choose a portal": "Elegir un portal",
+    "Limit results to current map view": "Limitar los resultados a la vista actual del mapa",
+    "Please choose an instance first.": "Por favor elige una instancia primero."
 }
